<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/backgroundColor">

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/timerTextView" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/timePicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/timerTextView"
        app:layout_constraintBottom_toTopOf="@+id/mainMenuButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_button_text"
            android:backgroundTint="@color/buttonColor"
            android:textColor="@color/textColorPrimary"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause_button_text"
            android:backgroundTint="@color/buttonColor"
            android:textColor="@color/textColorPrimary"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_button_text"
            android:backgroundTint="@color/buttonColor"
            android:textColor="@color/textColorPrimary"
            android:layout_marginStart="8dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
