<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/backgroundColor">

    <EditText
        android:id="@+id/cityInput"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/enter_city_hint"
        android:ems="10"
        android:textColor="@color/textColorPrimary"
        android:textColorHint="@color/textColorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/getWeatherButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/getWeatherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_weather_button_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/cityInput"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintStart_toEndOf="@+id/cityInput"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/weatherTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/cityInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/mainMenuButton"
        android:textColor="@color/textColorPrimary"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
